发表正式第一篇文章

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:wb=“http://open.weibo.com/wb”>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,19 +7,25 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="/assets/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
 
+        <!-- Page CSS -->
+        <link rel="stylesheet" href="/assets/css/style.css">
+       
     </head>
     <body>
 
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
+              <h1 class="title"><a href="/">{{ site.name }}</a>
+              </h1> 
+
+              <a class="extra" href="/">主页</a>
+
             </div>
 
                 {{ content }}
@@ -27,18 +33,20 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  contact me<br />
+  
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/mingzepeng/">github.com/mingzepeng</a>
+                  | <a href="#">mingzepeng@gmail.com</a>
+                  <br />
+                  
                 </p>
               </div>
             </div>
+                          <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a>
           </div>
         </div> <!-- /container -->
 
