--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ ul.posts span {
 
 .site .footer .contact {
   float: left;
-  margin-right: 3em;
+  margin-right: .5em;
 }
 
 .site .footer .contact a {
