增加了个人简历

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/main.css">
 
+        <!-- markdown CSS -->
+       <!--  <link rel="stylesheet" href="/assets/css/markdown.css"> -->
+
         <!-- Page CSS -->
         <link rel="stylesheet" href="/assets/css/style.css">
        
@@ -46,7 +49,7 @@
                 </p>
               </div>
             </div>
-                          <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a>
+                    <!--       <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
           </div>
         </div> <!-- /container -->
 
