添加了typo.css 添加了forkme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/main.css">
 
+        <!-- typo CSS -->
+        <link rel="stylesheet" href="/assets/css/typo.css/typo.css">
+        
         <!-- markdown CSS -->
        <!--  <link rel="stylesheet" href="/assets/css/markdown.css"> -->
 
@@ -52,6 +55,8 @@
                     <!--       <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
           </div>
         </div> <!-- /container -->
-
+<a href="https://github.com/mingzepeng" id="fork">
+    <img alt="Fork me on GitHub" src="/assets/imgs/forkme_right_darkblue.png">
+</a>
     </body>
 </html>
