--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,14 +5,14 @@
 /*****************************************************************************/
 
 /* Global Reset */
-* {
+/** {
   margin: 0;
   padding: 0;
 }
-
+*/
 html, body { height: 100%; }
 
-body {
+/*body {
   background-color: #FFF;
   font: 13.34px "微软雅黑",Helvetica, Arial, sans-serif;
   font-size: small;
@@ -21,11 +21,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
-
+*/
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
 
-a         { color: #00a; }
+a         { color: #09f; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
