增加了rakefile 修改简历

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <link rel="stylesheet" href="/assets/css/style.css">
        
     </head>
-    <body>
+    <body >
 
-        <div class="container">
+        <div class="container typo typo-selection">
           <div class="site">
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a>
@@ -45,8 +45,7 @@
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/mingzepeng/">github.com/mingzepeng</a>
-                  | <a href="#">mingzepeng@gmail.com</a>
+                  <a href="mailto:mingzepeng@gmail.com">mingzepeng@gmail.com</a>
                   <br />
                   
                 </p>
@@ -55,7 +54,7 @@
                     <!--       <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
           </div>
         </div> <!-- /container -->
-<a href="https://github.com/mingzepeng" id="fork">
+<a href="https://github.com/mingzepeng" id="fork" target="_blank">
     <img alt="Fork me on GitHub" src="/assets/imgs/forkme_right_darkblue.png">
 </a>
     </body>
