--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,12 +22,12 @@ html, body { height: 100%; }
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 */
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+/*h1 { margin-bottom: 1em; }*/
+/*p { margin: 1em 0; }*/
 
 a         { color: #09f; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+/*a:hover   { color: #000; }
+a:visited { color: #a0a; }*/
 
 table {
   font-size: inherit;
@@ -61,7 +61,7 @@ ul.posts span {
 /*****************************************************************************/
 
 .site {
-  font-size: 115%;
+ 
   text-align: justify;
   width: 42em;
   margin: 3em auto 2em;
@@ -75,7 +75,6 @@ ul.posts span {
 
 .site .header h1.title {
   display: inline-block;
-  margin-bottom: 2em;
 }
 
 .site .header h1.title a {
@@ -97,6 +96,7 @@ ul.posts span {
 
 .site .meta {
   color: #aaa;
+  margin-bottom: 5px;
 }
 
 .site .footer {
