--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,12 +37,7 @@
                 {{ content }}
 
             <div class="footer">
-              <div class="contact">
-                <p>
-                  contact me<br />
-  
-                </p>
-              </div>
+     
               <div class="contact">
                 <p>
                   <a href="mailto:mingzepeng@gmail.com">mingzepeng@gmail.com</a>
@@ -51,7 +46,7 @@
                 </p>
               </div>
             </div>
-                    <!--       <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
+                         <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a>
           </div>
         </div> <!-- /container -->
 <a href="https://github.com/mingzepeng" id="fork" target="_blank">
