--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,7 @@ ul.posts span {
 .site {
  
   text-align: justify;
-  width: 42em;
+  width: 700px;
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
