--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<style type="text/css">
+.post p{ text-indent: 0em}
+</style>
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date: "%Y-%m-%d" }}</p>
 
