--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/assets/css/syntax.css">
+
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/main.css">
@@ -17,7 +16,9 @@
         
         <!-- markdown CSS -->
        <!--  <link rel="stylesheet" href="/assets/css/markdown.css"> -->
-
+       
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/assets/css/syntax.css">
         <!-- Page CSS -->
         <link rel="stylesheet" href="/assets/css/style.css">
        
@@ -31,6 +32,10 @@
               </h1> 
 
               <a class="extra" href="/">主页</a>
+
+              <a class="extra" href="{{site.url}}/pages/me-say.html">梓说</a>
+
+              <a class="extra" href="{{site.url}}/pages/about-me.html">关于我</a>
 
             </div>
 
