增加我的项目

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
 
               <a class="extra" href="/">主页</a>
 
+              <a class="extra" href="{{site.url}}/pages/my-projects.html">我的项目</a>
+
               <a class="extra" href="{{site.url}}/pages/me-say.html">梓说</a>
 
               <a class="extra" href="{{site.url}}/pages/about-me.html">关于我</a> 
@@ -55,7 +57,7 @@
           </div>
         </div> <!-- /container -->
 <a href="https://github.com/mingzepeng" id="fork" target="_blank">
-    <img alt="Fork me on GitHub" src="/assets/imgs/forkme_right_darkblue.png">
+    <img alt="Fork me on GitHub" src="{{url}}/assets/imgs/forkme_right_darkblue.png">
 </a>
     </body>
 </html>
