--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,14 @@
 
 
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/assets/css/main.css">
+
 
         <!-- typo CSS -->
         <link rel="stylesheet" href="/assets/css/typo.css/typo.css">
-        
+  
+          <!-- Custom CSS -->
+        <link rel="stylesheet" href="/assets/css/main.css">
+              
         <!-- markdown CSS -->
        <!--  <link rel="stylesheet" href="/assets/css/markdown.css"> -->
        
@@ -25,19 +27,22 @@
     </head>
     <body >
 
-        <div class="container typo typo-selection">
+      <div class="container">
+          <div class="banner">
+            
+          </div>
           <div class="site">
-            <div class="header">
+            <div class="header" id="header">
               <h1 class="title"><a href="/">{{ site.name }}</a>
               </h1> 
 
               <a class="extra" href="/">主页</a>
 
-              <a class="extra" href="{{site.url}}/pages/my-projects.html">我的项目</a>
+              <a href="{{site.url}}/pages/my-projects.html">我的项目</a>
 
-              <a class="extra" href="{{site.url}}/pages/me-say.html">梓说</a>
+              <a href="{{site.url}}/pages/me-say.html">梓说</a>
 
-              <a class="extra" href="{{site.url}}/pages/about-me.html">关于我</a> 
+              <a href="{{site.url}}/pages/about-me.html">关于我</a> 
 
             </div>
 
@@ -53,9 +58,9 @@
                 </p>
               </div>
             </div>
-                         <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a>
+                       <!--   <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
           </div>
-        </div> <!-- /container -->
+      </div>
 <a href="https://github.com/mingzepeng" id="fork" target="_blank">
     <img alt="Fork me on GitHub" src="{{url}}/assets/imgs/forkme_right_darkblue.png">
 </a>
