--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,20 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date: "%Y-%m-%d" }}</p>
 
-<div class="post">
+<div class="post typo typo-selection">
 {{ content }}
 </div>
+<!-- Duoshuo Comment BEGIN -->
+<div class="ds-thread"></div>
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"mingzepeng"};
+(function() {
+	var ds = document.createElement('script');
+	ds.type = 'text/javascript';ds.async = true;
+	ds.src = 'http://static.duoshuo.com/embed.js';
+	ds.charset = 'UTF-8';
+	(document.getElementsByTagName('head')[0] 
+	|| document.getElementsByTagName('body')[0]).appendChild(ds);
+})();
+</script>
+<!-- Duoshuo Comment END -->
