--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,22 +1,17 @@
 ---
 layout: default
 ---
-<style type="text/css">
-.post p{ text-indent: 0em}
-</style>
 
-
-
-<div class="post typo typo-selection">
+<article class="post">
 {{ content }}
-</div>
+</article>
 <p class="meta">{{ page.date | date: "%Y-%m-%d" }}</p>
 <script type="text/javascript">
-	var header = document.getElementById('header');
-	var links = header.getElementsByTagName('a');
+	var nav = document.getElementsByTagName('nav')[0];
+	var links = nav.getElementsByTagName('a');
 	var url = location.href;
 	var page = url.slice(url.lastIndexOf('/')+1);
-	for(var i = links.length-1; i>0 ; i--){
+	for(var i = links.length-1; i>=0 ; i--){
 		links[i].className = '';
 		if(links[i].href.indexOf(page) > 0) links[i].className = 'extra'
 	}
