--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,12 @@
 ---
 layout: default
 ---
-<style type="text/css">
-.post p{ text-indent: 0em}
-</style>
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date: "%Y-%m-%d" }}</p>
 
-<div class="post typo typo-selection">
+<article class="post">
 {{ content }}
-</div>
+</article>
 <!-- Duoshuo Comment BEGIN -->
 <div class="ds-thread"></div>
 <script type="text/javascript">
