--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,21 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
-
+      <!--[if IE]>
+         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
 
         <!-- typo CSS -->
         <link rel="stylesheet" href="/assets/css/typo.css/typo.reset.css" media="screen">
         <link rel="stylesheet" href="/assets/css/typo.css/typo.css" media="screen">
 
-         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/assets/css/syntax.css" media="screen">
+
           <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/main.css" media="screen">
               
+         <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/assets/css/syntax.css" media="screen">
         <!-- markdown CSS -->
        <!--  <link rel="stylesheet" href="/assets/css/markdown.css"> -->
-       
+
  
 
        
@@ -31,7 +33,7 @@
             </header>
               <nav>
               <a class="extra" href="/">主页</a>
-
+              <a href="{{site.url}}/archives.html">归档</a>
               <a href="{{site.url}}/pages/my-projects.html">作品</a>
 
               <a href="{{site.url}}/pages/me-say.html">梓说</a>
@@ -40,14 +42,14 @@
               </nav>
            
 
-          <div class="content typo typo-selection">
+          <section class="content typo typo-selection">
 
 
                 {{ content }}
 
 
                        <!--   <a href="http://weibo.com/u/1177119687?s=6uyXnP" target="_blank"><img border="0" src="http://service.t.sina.com.cn/widget/qmd/1177119687/95bc61d7/7.png"/></a> -->
-          </div>
+          </section>
             <footer>
      
               <div class="contact">
@@ -60,9 +62,6 @@
 </a>
     </body>
 </html>
-<script type="text/javascript">
-  
-</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -72,21 +71,60 @@
   ga('create', 'UA-41956630-1', 'mingzepeng.github.io');
   ga('send', 'pageview');
 
-  document.onscroll = function(event){
-    var scrollTop = document.body.scrollTop;
-    var nav = document.getElementsByTagName('nav')[0];
-    var container = document.getElementById('container');
-    var width = container.clientWidth;
-    var style = container.currentStyle ? container.currentStyle : window.getComputedStyle(nav, null);
-    if(scrollTop > 250) {
-      nav.style.position = 'fixed';
-      nav.style.width = (width - parseInt(style.paddingLeft) - parseInt(style.paddingRight) ) + 'px'
-      nav.style.top = "0px"
-    }else{
 
-      nav.style.position = 'static'
-      nav.style.width = 'auto'
-    }
+var parsePx = function(elem,css){
+  if(window.getComputedStyle)
+    return window.getComputedStyle(elem,null)[css];
+  else{
+    var ret=elem.currentStyle[css];
+    var left=elem.style.left;
+    elem.style.left=css==="fontSize"?"1em":ret;  //我们修改了该元素的left值
+    ret=elem.style.pixelLeft+"px";         //pixelLeft会返回单位转换成px活的数值
+    elem.style.left=left;                  //恢复left
+    return ret;   
   }
+
+};
+
+  var nav = document.getElementsByTagName('nav')[0];
+  var links = nav.getElementsByTagName('a');
+
+
+var nav = document.getElementsByTagName('nav')[0];
+var container = document.getElementById('container');
+var flag = false;
+
+var url = location.href;
+var page = url.slice(url.lastIndexOf('/')+1);
+if(page)
+{
+  for(var i = links.length-1; i>=0 ; i--){
+  links[i].className = '';
+  if(links[i].href.indexOf(page) > 0) links[i].className = 'extra'
+}
+}
+
+window.onscroll = function(event){
+
+  var scrollTop = document.body.scrollTop > 0 ? document.body.scrollTop: document.documentElement.scrollTop;
+  var width = container.clientWidth;
+  var style = nav.currentStyle ? nav.currentStyle : window.getComputedStyle(nav, null);
+
+  if(scrollTop > 210) {
+    if(flag) return true;
+    nav.style.position = 'fixed';
+    nav.style.width = width + 'px';
+    nav.style.width = (width - parseInt(parsePx(nav,'paddingLeft')) - parseInt(parsePx(nav,'paddingRight')) ) + 'px'
+    nav.style.top = "0px"
+    flag = true;
+  }else{
+    if(!flag) return true;
+    nav.style.position = 'static'
+    nav.style.width = 'auto'
+    flag = false;
+  }
+}
+
+
 
 </script>
