--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,7 @@ ul.posts span {
   font-size: .8em;
 }
 
-ul.posts a.title {
+#home ul.posts a.title {
   font-size: 1.6em;
 }
 
@@ -76,14 +76,54 @@ nav a {
   font-size: 16px;
   margin-right: 1.1em;
   display: inline-block;
-  padding: 0.5em 1em; ;
+  padding: 0.5em 1em;
+  position: relative;
 }
 
-nav a.extra,nav a:hover {
+nav a.extra,
+nav a:hover {
 background: #36638a;
 text-decoration: none;
 }
 
+/*nav a::before,
+nav a::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  border: 4px solid rgba(0,0,0,0.2);
+  border-radius: 50%;
+  content: '';
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  -webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  -moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  transform: translateX(-50%) translateY(-50%) scale(0.2);
+}
+
+nav a::after {
+  width: 40px;
+  height: 40px;
+  border-width: 2px;
+  -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  transform: translateX(-50%) translateY(-50%) scale(0.8);
+}
+
+nav a:hover::before,
+nav a:hover::after,
+nav a:focus::before,
+nav a:focus::after {
+  opacity: 1;
+  -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+  -moz-transform: translateX(-50%) translateY(-50%) scale(1);
+  transform: translateX(-50%) translateY(-50%) scale(1);
+}
+*/
 
 .content{ padding: 1em 3em;}
 
@@ -117,7 +157,7 @@ footer .rss img {
 /* standard */
 .post pre {
   border: 1px solid #ddd;
-  background-color: #eef;
+/*  background-color: #eef;*/
   padding: 0 .4em;
 }
 
@@ -127,7 +167,7 @@ footer .rss img {
 
 .post code {
   border: 1px solid #ddd;
-  background-color: #eef;
+/*  background-color: #eef;*/
   padding: 0 .2em;
 }
 
