--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
 
 
 html, body { height: 100%; color: #555}
-body{background: #eee url("../imgs/bg.png") }
+body{background: #eee url("../imgs/bg.png") ; padding-top:3em; text-shadow: 0.1px 0.1px 0.5px grey;}
 
 
 a{ color: #09f; }
@@ -49,11 +49,13 @@ ul.posts span {
 /*****************************************************************************/
 .container{
   width: 80%;
+  max-width: 1200px;
   background-color: white;
   text-align: justify;
-  margin: 50px auto;
+  margin: 0px auto;
   box-shadow: -3px 0 6px #aaa, 3px 0 6px #aaa;
   position: relative;
+
 }
 
 header{
@@ -80,20 +82,22 @@ nav a {
   position: relative;
 }
 
-nav a.extra,
-nav a:hover {
+nav a.extra,nav a:hover {
 background: #36638a;
 text-decoration: none;
 }
 
-/*nav a::before,
+/*nav a:hover{
+  text-decoration: none;
+}
+nav a::before,
 nav a::after {
   position: absolute;
   top: 50%;
   left: 50%;
   width: 50px;
   height: 50px;
-  border: 4px solid rgba(0,0,0,0.2);
+  border-top: 5px solid rgba(0,0,0,0.2);
   border-radius: 50%;
   content: '';
   opacity: 0;
@@ -108,7 +112,7 @@ nav a::after {
 nav a::after {
   width: 40px;
   height: 40px;
-  border-width: 2px;
+  border-top-width: 4px;
   -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
   -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
   transform: translateX(-50%) translateY(-50%) scale(0.8);
@@ -122,10 +126,12 @@ nav a:focus::after {
   -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
   -moz-transform: translateX(-50%) translateY(-50%) scale(1);
   transform: translateX(-50%) translateY(-50%) scale(1);
-}
-*/
+}*/
+
 
 .content{ padding: 1em 3em;}
+
+article h2{ color: #09f}
 
 footer {
   font-size: 1em;
