--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
               <h1>{{ site.name }}</h1> 
             </header>
               <nav>
-              <a class="extra" href="/">主页</a>
+              <a href="/">主页</a>
               <a href="{{site.url}}/archives.html">归档</a>
               <a href="{{site.url}}/pages/my-projects.html">作品</a>
 
@@ -74,11 +74,27 @@ seajs.config({
 seajs.use('/assets/js/main.js')
 </script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+(function(){
+    var nav = document.getElementsByTagName('nav')[0];
+    var links = nav.getElementsByTagName('a');
+    var url = location.href;
+    var page = url.slice(url.lastIndexOf('/') + 1);
+    if (page) {
+        for (var i = links.length - 1; i >= 0; i--) {
+            links[i].className = '';
+            if (links[i].href.indexOf(page) > 0) links[i].className = 'extra';
+        }
+    }else{
+        links[0].className = 'extra';
+    }
 
-  ga('create', 'UA-41956630-1', 'mingzepeng.github.io');
-  ga('send', 'pageview');
+})();
+
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-41956630-1', 'mingzepeng.github.io');
+ga('send', 'pageview');
 </script>
