--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
               <a href="{{site.url}}/archives.html">归档</a>
               <a href="{{site.url}}/pages/my-projects.html">作品</a>
 
-              <a href="{{site.url}}/pages/me-say.html">梓说</a>
+              <!--<a href="{{site.url}}/pages/me-say.html">梓说</a>-->
 
               <a href="{{site.url}}/pages/about-me.html">关于我</a> 
               </nav>
