--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
               <nav>
               <a href="/">主页</a>
               <a href="{{site.url}}/archives.html">归档</a>
-              <a href="{{site.url}}/pages/my-projects.html">作品</a>
+              <!--<a href="{{site.url}}/pages/my-projects.html">作品</a>-->
 
               <!--<a href="{{site.url}}/pages/me-say.html">梓说</a>-->
 
